--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,7 @@
 	<string name="start_pause">start pause</string>
 	<string name="stop_pause">stop pause</string>
     <string name="add_row">add row</string>
+    <string name="clear_">clear</string>
     <string-array name="state">
 		<item>nothing</item>
 		<item>pause</item>
