--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,16 +17,49 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <resources>
+	<string name="app_version">0.1</string>
 	<string name="app_name">TravelLog</string>
+	<string name="author_">Author:</string>
+	<string name="version_">Version:</string>
+	<string name="license_">License:</string>
+	<string name="author">Felix Bechstein &lt;f@ub0r.de&gt;</string>
+	<string name="license">GPLv3 - see
+		http://www.gnu.org/licenses/gpl-3.0.txt</string>
+	<string name="source_">Sourcescode:</string>
+	<string name="source">http://repo.or.cz/w/travelLog.git
+	</string>
+	<string name="website_">Website:</string>
+	<string name="website">http://code.google.com/p/travellogdroid/
+	</string>
+	<string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=9284303
+	</string>
+	<string name="donate_mail">f@ub0r.de</string>
+	<string name="donate_subject">I'm the donator. My IMEI hash is...</string>
+	<string name="donate_">Donate/remove ads</string>
+	<string name="postdonate">To remove ads, you need to send me the MD5 hash
+		of your IMEI (unique id of your phone). This hash is a
+		one-way-function. It is not traceable back to you. I'll remove your
+		ads with the next release. 
+	</string>
+	<string name="send_">Send</string>
+	<string name="settings">Preferences</string>
+	<string name="about_">About CallMeter NG</string>
+	<string name="more_">More Apps..</string>
+	<string name="changelog_">Changelog</string>
+	<string name="about">TravelLog is a one-click-app to log your
+		business trips for later accountung.</string>
+
 	<string name="start_work">start work</string>
 	<string name="stop_work">stop work</string>
 	<string name="start_travel">start travel</string>
 	<string name="stop_travel">stop travel</string>
 	<string name="start_pause">start pause</string>
 	<string name="stop_pause">stop pause</string>
-    <string name="add_row">add row</string>
-    <string name="clear_">clear</string>
-    <string-array name="state">
+	<string name="add_row">add row</string>
+	<string name="clear_">clear</string>
+	<string name="mail_">Mail address</string>
+	<string name="mail__">Mail address to export data</string>
+	<string-array name="state">
 		<item>nothing</item>
 		<item>pause</item>
 		<item>travel</item>
