--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -25,10 +25,9 @@
 	</string>
 	<string name="donate_">Spenden/Werbung entfernen</string>
 	<string name="postdonate">Um die Werbung zu entfernen brauche ich den MD5
-		Hash deiner IMEI (Eindeutige ID deines Handys) von dir. Der MD5 Hash
-		deiner IMEI. Der Hash ist eine Einwegfunktion und ist somit nicht zu
-		deiner IMEI Rückverfolgbar. Ich werde die Werbung mit dem nächsten
-		Release dann entfernen.
+		Hash deiner IMEI (Eindeutige ID deines Handys) von dir. Der Hash ist
+		eine Einwegfunktion und ist somit nicht zu deiner IMEI Rückverfolgbar.
+		Ich werde die Werbung mit dem nächsten Release dann entfernen.
 	</string>
 	<string name="send_">Senden</string>
 	<string name="remove_ads">Werbung entfernen</string>
@@ -49,7 +48,8 @@
 	<string name="export_">Als Mail senden</string>
 	<string name="export_subject">TravelLog Export</string>
 	<string name="mail_">Mail Adresse</string>
-	<string name="mail__">Eine Mail Adresse an die der Export geschickt wird</string>
+	<string name="mail__">Eine Mail Adresse an die der Export geschickt
+		wird</string>
 	<string-array name="state">
 		<item>Nichts</item>
 		<item>Pause</item>
