--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -50,6 +50,7 @@
 	<string name="mail_">Mail Adresse</string>
 	<string name="mail__">Eine Mail Adresse an die der Export geschickt
 		wird</string>
+		<string name="for_">für</string>
 	<string-array name="state">
 		<item>Nichts</item>
 		<item>Pause</item>
