--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -64,6 +64,7 @@
 	<string name="mail_">Mail address</string>
 	<string name="mail__">Mail address to export data</string>
 	<string name="for_">for</string>
+	<string name="round_">Round time</string>
 	<string-array name="state">
 		<item>Nothing</item>
 		<item>Pause</item>
