--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -50,7 +50,8 @@
 	<string name="mail_">Mail Adresse</string>
 	<string name="mail__">Eine Mail Adresse an die der Export geschickt
 		wird</string>
-		<string name="for_">für</string>
+	<string name="for_">für</string>
+	<string name="round_">Zeit runden</string>
 	<string-array name="state">
 		<item>Nichts</item>
 		<item>Pause</item>
