--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,32 +23,25 @@
 	<string name="version_">Version:</string>
 	<string name="license_">License:</string>
 	<string name="author">Felix Bechstein &lt;f@ub0r.de&gt;</string>
-	<string name="license">GPLv3 - see
-		http://www.gnu.org/licenses/gpl-3.0.txt</string>
+	<string name="license">GPLv3 - see http://www.gnu.org/licenses/gpl-3.0.txt</string>
 	<string name="source_">Sourcescode:</string>
-	<string name="source">http://repo.or.cz/w/travelLog.git
-	</string>
+	<string name="source">http://repo.or.cz/w/travelLog.git</string>
 	<string name="website_">Website:</string>
-	<string name="website">http://code.google.com/p/travellogdroid/
-	</string>
-	<string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=9284303
-	</string>
+	<string name="website">http://code.google.com/p/travellogdroid/</string>
+	<string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=9284303</string>
 	<string name="donate_mail">f@ub0r.de</string>
 	<string name="donate_subject">I\'m the donator. My IMEI hash is...</string>
-	<string name="donate_">Donate/remove ads</string>
-	<string name="remove_ads">Remove ads</string>
-	<string name="postdonate">To remove ads, you need to send me the MD5 hash
-		of your IMEI (unique id of your phone). This hash is a
-		one-way-function. It is not traceable back to you. I\'ll remove your
-		ads with the next release. 
-	</string>
+	<string name="donate_">Donate</string>
+	<string name="donate_remove_ads_">Donate/remove ads</string>
+	<string name="remove_ads_">Remove ads</string>
+	<string name="predonate">This is an open-source application released under the GPLv3 license. It is free and will remain free. If you really like it or if you are annoyed by the ads, please consider donating (via paypal). I\'ll remove the ads for you with the next release.\nThank you!</string>
+	<string name="postdonate">To remove ads, you need to send me the MD5 hash of your IMEI (unique id of your phone). This hash is a one-way-function. It is not traceable back to you.</string>
 	<string name="send_">Send</string>
 	<string name="settings">Preferences</string>
 	<string name="about_">About TravelLog</string>
 	<string name="more_">More Apps..</string>
 	<string name="changelog_">Changelog</string>
-	<string name="about">TravelLog is a one-click-app to log your
-		business trips for later accountung.</string>
+	<string name="about">TravelLog is a one-click-app to log your business trips for later accounting.</string>
 
 	<string name="start_work">Start work</string>
 	<string name="stop_work">Stop work</string>
