--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,7 @@
 	<string name="author">Felix Bechstein &lt;f@ub0r.de&gt;</string>
 	<string name="license">GPLv3 - see http://www.gnu.org/licenses/gpl-3.0.txt</string>
 	<string name="source_">Sourcescode:</string>
-	<string name="source">http://repo.or.cz/w/travelLog.git</string>
+	<string name="source">http://github.com/felixb/travellog</string>
 	<string name="website_">Website:</string>
 	<string name="website">http://code.google.com/p/travellogdroid/</string>
 	<string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=9284303</string>
