--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -22,7 +22,7 @@
 	<string name="license_">Lizens:</string>
 	<string name="license">GPLv3 - siehe http://www.gnu.org/licenses/gpl-3.0.txt</string>
 	<string name="donate_subject">Ich bin der Spender. Mein IMEI hash ist...</string>
-	<string name="donate_">Spenden</string>
+	<string name="donate_">Spenden (Paypal)</string>
 	<string name="donate_remove_ads_">Spenden/Werbung entfernen</string>
 	<string name="predonate">Dies ist eine open-source App. Sie ist und bleibt frei. Wenn du die App wirklich magst oder dich die Werbung nervt, kannst du gerne etwas spenden. Ich werde die Werbung mit dem nächsten Release dann entfernen.</string>
 	<string name="postdonate">Um die Werbung zu entfernen brauche ich den MD5 Hash deiner IMEI (Die eindeutige ID deines Handys) von dir. Der Hash ist eine Einwegfunktion und ist somit nicht zu deiner IMEI Rückverfolgbar.</string>
