--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,6 +29,12 @@
 	<string name="source">http://github.com/felixb/travellog</string>
 	<string name="website_">Website:</string>
 	<string name="website">http://code.google.com/p/travellogdroid/</string>
+	<string name="faq_">FAQ</string>
+	<string name="faq_hint">Some tips and tricks, how to set up this app.</string>
+	<string name="feedback_">Feedback</string>
+	<string name="feedback_hint">Report bugs, request features ...</string>
+	<string name="twitter_">twitter</string>
+	<string name="twitter_hint">Follow me on twitter.\nGet update notifications etc.</string>
 	<string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=9284303</string>
 	<string name="donate_mail">f@ub0r.de</string>
 	<string name="donate_subject">I\'m the donator. My IMEI hash is...</string>
