--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -30,6 +30,7 @@
 	<string name="donate_remove_ads_">Spenden/Werbung entfernen</string>
 	<string name="predonate">Dies ist eine open-source App. Sie ist und bleibt frei. Wenn du die App wirklich magst oder dich die Werbung nervt, kannst du gerne etwas spenden. Ich werde die Werbung mit dem nächsten Release dann entfernen.</string>
 	<string name="postdonate">Um die Werbung zu entfernen brauche ich den MD5 Hash deiner IMEI (Die eindeutige ID deines Handys) von dir. Der Hash ist eine Einwegfunktion und ist somit nicht zu deiner IMEI Rückverfolgbar.</string>
+	<string name="postdonate_check">Bitte überprüfe vor dem Senden, dass ob du wirklich schon gespendet hast.</string>
 	<string name="send_hash_">Hash senden</string>
 	<string name="signature_">Ich werde dir dann einen Code schicken, mit dem du die Werbung dann abschalten kannst.\Du kannst diesen Code hier unten einfügen:</string>
 	<string name="sig_loaded">Werbung entfernt!</string>
