link new website, new icon

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,7 +28,7 @@
 	<string name="source_">Sourcescode:</string>
 	<string name="source">http://github.com/felixb/travellog</string>
 	<string name="website_">Website:</string>
-	<string name="website">http://code.google.com/p/travellogdroid/</string>
+	<string name="website">http://code.google.com/p/ub0rapps/</string>
 	<string name="faq_">FAQ</string>
 	<string name="faq_hint">Some tips and tricks, how to set up this app.</string>
 	<string name="feedback_">Feedback</string>
