--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,7 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <resources>
-	<string name="app_version">1.8.0</string>
+	<string name="app_version">2.0beta1</string>
 	<string name="app_name">TravelLog</string>
 	<string name="lang">en</string>
 	<string name="author_">Author:</string>
