--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -18,7 +18,7 @@
        -->
 <!--
                This file is generated automatically by ub0rlib/php.
-               Visit http://ub0r.de/translate/travellog/edit.php?lang=de&file=strings.xml to edit the file.
+               Visit http://ub0r.de/translate/travellog/de/strings.xml to edit the file.
        -->
 <resources>
   <string name="author_" formatted="false">Autor:</string>
