--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,12 +25,7 @@
 	<string name="website_">Website:</string>
 	<string name="hint">This view holds a list of log items with your working time.\n\nJust press one of the buttons below to start a new one.</string>
 	<string name="send_">Send</string>
-	<string name="start_work">Start work</string>
-	<string name="stop_work">Stop work</string>
-	<string name="start_travel">Start travel</string>
-	<string name="stop_travel">Stop travel</string>
-	<string name="start_pause">Start pause</string>
-	<string name="stop_pause">Stop pause</string>
+	<string name="stop">Stop</string>
 	<string name="pause">Pause</string>
 	<string name="travel">Travel</string>
 	<string name="work">Work</string>
